package protoFile.practice.practiceFinsihed;
message PracticeFinsihed{
     required string message = 1;
}